--- a/Gestion_menbres/templates/diacre/dashboard.html
+++ b/Gestion_menbres/templates/diacre/dashboard.html
@@ -181,7 +181,7 @@ Page d'acceuil
           enabled: false
         },
         stroke: {
-          show: ture,
+          show: true,
           width: 8,
           colors: ['transparent']
         },
