--- a/Gestion_menbres/templates/includes/diacre/nav.html
+++ b/Gestion_menbres/templates/includes/diacre/nav.html
@@ -18,7 +18,7 @@
 
       <li>
 
-        <img id="avatarButton" type="button" data-dropdown-toggle="userDropdown" data-dropdown-placement="bottom-start"
+        <img id="avatarButton"  data-dropdown-toggle="userDropdown" data-dropdown-placement="bottom-start"
           class="w-10 h-10 rounded-full cursor-pointer" src="{% static 'img/online.png' %}" alt="User dropdown">
 
         <!-- Dropdown menu -->
